--- a/parcer/Makefile
+++ b/parcer/Makefile
@@ -1,11 +1,13 @@
 NAME = parcer
 
 SRC = ../gnl/get_next_line.c ../gnl/get_next_line_utils.c main.c camera.c \
-	camera2.c utils.c
+	camera2.c utils.c utils2.c utils3.c utils4.c parce.c Amb.c Res.c \
+	light.c light2.c sphere.c sphere2.c plane.c plane2.c squar.c \
+	squar2.c triangle.c triangle2.c cylinder.c cylinder2.c
 
 SRC_OBJ = $(SRC:.c=.o)
 
-CFLAGS = -Wall -Werror -Wextra
+CFLAGS = -Wall -Werror -Wextra -fsanitize=address
 
 HEADER = parcer.h
 
